Algumas mundaças simples, principalmente no formato em que o frontend era servido e embutido no executavel final
